fixed pre-wrap

--- a/public/stylesheets/sass/common.sass
+++ b/public/stylesheets/sass/common.sass
@@ -269,7 +269,7 @@ body
   white-space: normal
   
 .textile
-  white-space: pre  
+  white-space: pre-wrap
   
    
 table.assignments
@@ -323,7 +323,7 @@ table.assignments
     -webkit-font-smoothing: anti-aliased
     
 #error_explanation
-  h2
+  h3
     font: normal 18px myriad-pro, sans-serif
     -webkit-font-smoothing: anti-aliased
     color: #FF3030
