--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -314,7 +314,7 @@ body {
   white-space: normal; }
 
 .textile {
-  white-space: pre; }
+  white-space: pre-wrap; }
 
 table.assignments {
   width: 640px;
@@ -366,7 +366,7 @@ table.assignments {
     color: #e3170d;
     -webkit-font-smoothing: anti-aliased; }
 
-#error_explanation h2 {
+#error_explanation h3 {
   font: normal 18px myriad-pro, sans-serif;
   -webkit-font-smoothing: anti-aliased;
   color: #ff3030; }
